Fix documentation consistency and professionalism
Changes:
- Fixed version inconsistency: Changed 'Version 2.0' to 'Version 1.0' in README
- Replaced specific examples (toronto-0001) with generic placeholders
- Added clarification that node names are examples throughout docs
- Added professional AI acknowledgment in README and AUTHORS
- Made documentation more accessible and professional

Files updated:
- README.md: Version fix, AI acknowledgment, generic node examples
- FAQ.md: Replaced 9 toronto references with generic examples
- NEW-QUICKSTART.md: Updated example node names
- AUTHORS: Added development note about AI assistance

This ensures consistent, professional documentation without specific hardcoded examples.

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,10 +6,15 @@
 - Project inception and architecture
 - Core implementation
 - Documentation and guides
+- Built with assistance from AI tools for code quality and documentation
 
 ## Contributors
 
 Contributions are welcome! See [CONTRIBUTING.md](CONTRIBUTING.md) for guidelines.
+
+---
+
+**Development Note:** This project was developed with assistance from AI tools to enhance code quality, ensure comprehensive safety features, and create professional documentation.
 
 ---
 
